--- a/src/components/translation/ru.json
+++ b/src/components/translation/ru.json
@@ -62,7 +62,8 @@
   },
   "titleBlock": {
     "needHelp": "Нужна помощь с подбором оборудования?",
-    "productDescription": "Для гранулирования биомассы, rdf, \nкомбикормов и пищевой продукции",
+    "granulatorProductDescription": "Для гранулирования биомассы, rdf, \nкомбикормов и пищевой продукции",
+    "mixerProductDescription": "Для непрерывного смешивания и\nувлажнения МАТЕРИАЛОВ",
     "countPrice": "Запросить стоимость"
   },
   "inputSizesBlock": {
@@ -134,10 +135,11 @@
     "GM650": "GM650",
     "GM850": "GM850"
   },
-  "rollerShellTypes": {
-    "forFlatDie": "Под плоский тип",
-    "forRingDie": "Под кольцевой тип",
-    "forTwinTrack": "Под Twin-Track"
+  "mixerTypes": {
+    "GM-520": "GM-520",
+    "GM650": "GM650",
+    "GM850": "GM850",
+    "GM850D": "GM850D"
   },
   "diagrams": {
     "millGranulator": {
@@ -219,6 +221,40 @@
           "note1": "* Расчет основан на тестовых значениях с матрицей ⌀ 6/8 мм. Производительность может варьироваться в зависимости от типа сырья, подготовки материала и технических характеристик матрицы.",
           "note2": "* Информация без смесителя."
         }
+      }
+    },
+    "millMixer": {
+      "mainFeatures": {
+        "title": {
+          "characteristics": "Главные характеристики",
+          "mixer": "Смеситель GM"
+        },
+        "subtitle": "Гомогенная подготовка\nсырья",
+        "descriptionBg": "Характеристики",
+        "features": {
+          "1": "Усиленная конструкция смеситель-кондиционера GM гарантирует равномерное и стабильное смешивание компонентов даже при работе с тяжёлыми, влажными и труднообрабатываемыми материалами, обеспечивая высокое качество готового продукта.",
+          "2": "С упором на удобство эксплуатации: наличие обслуживающего люка позволяет быстро получить доступ к внутренним элементам, а конструкция с легко съёмными лопастями значительно упрощает их демонтаж и замену",
+          "3": "Опционально: оснащение автоматической дозировки воды и жидкости, обеспечивающей максимально точную подачу благодаря интеграции контроллера и высокоэффективной форсунки ProMinent",
+          "4": "Специально спроектированный усиленный вал и усовершенствованная лопастная система смеситель-кондиционера GM обеспечивают интенсивное перемешивание компонентов, выдерживая высокие механические нагрузки и сохраняя оптимальную производительность при любых условиях эксплуатации."
+        }
+      },
+      "steamSystemBlock": {
+        "title": {
+          "system": "Система подачи пара",
+          "intelligent": "С интеллектуальным",
+          "steam": "Клапаном пара"
+        },
+        "subtitle": "Эффективное управление процессом",
+        "descriptionBg": "Контроль",
+        "notification": "Малый настроечный винт для более точной регулировки объема пара"
+      },
+      "AutomaticDosingWaterBlock": {
+        "title": {
+          "dosing": "Автоматическая дозировка",
+          "liquids": "Воды и жидкости"
+        },
+        "subtitle": "Более точная система подачи и дозировки \nc контроллером и форсункой ProMinent",
+        "descriptionBg": "Автоматизация"
       }
     }
   },
